# mnist-digits-nb-nn

./: .gitignore  README.md  flake.nix  pyproject.toml
assignment/: __main__.py  analysis.py  cli.py  cv.py  data_loaders.py  test.py  train.py
assignment/models/: nb.py  nn.py
assignment/test/: __init__.py
assignment/train/: __init__.py
assignment/tune/: __init__.py  nb.py  nn.py  view.py
data/digitdata/: y_val.npy
mnist_digits_nb_nn/: __main__.py  analysis.py  cli.py  cv.py  test.py  train.py
mnist_digits_nb_nn/models/: __init__.py
mnist_digits_nb_nn/tune/: __init__.py  nb.py  nn.py  view.py
report/: constants.typ  references.bib  report.typ
report/data/: test_nb.json  test_nn.json
src/: alt_data_loader.py  alt_model.py  analysis.py  cross_validation.py  data_loaders.py  main.py  naive_bayes.py  nb_data_loader.py  neural_network.py  preprocess.py  tuning.py
src/data/digitdata/: y_train.npy
