[tool.poetry]
name = "mnist-digits-nb-nn"
version = "1.0.0"
description = "A comparison of Naive Bayes and CNN models for handwritten digit classification on the MNIST dataset."
authors = ["Dixon Sean Low Yan Feng <root@dixslyf.dev>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.3.1"
numpy = "^2.0.0"
scipy = "^1.14.0"
pandas = "^2.2.2"
scikit-learn = "^1.5.1"
matplotlib = "^3.9.1"
scikit-image = "^0.24.0"
optuna = "^3.6.1"

[tool.poetry.scripts]
mnist-digits-nb-nn = 'mnist_digits_nb_nn.cli:run'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
